# f1-driver-championship-odds

./: .dockerignore  Dockerfile  README.md  app.py  pyproject.toml  railway.json
.kilocode/: mcp.json
templates/: index.html
